cmd/envoy-inferencepool-extension-server/gateway-httproute.yaml



apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: inference-pool-with-httproute
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-pool-with-httproute
  namespace: envoy-gateway-system
spec:
  gatewayClassName: inference-pool-with-httproute
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway-basic
#      namespace: envoy-gateway-system
  listeners:
    - name: http
      protocol: HTTP
      port: 7788

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-pool-with-httproute
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: inference-pool-with-httproute
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: envoy-ai-gateway-basic-testupstream
          namespace: envoy-gateway-system
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
